--- a/app/assets/styles/main.scss
+++ b/app/assets/styles/main.scss
@@ -15,8 +15,11 @@ mega-video {
   float:left;
   margin:0;
   video {
+    display: block;
+    float: left;
     width: 50vw;
-    height: 50vh
+    height: 50vh;
+    object-fit: cover;
   }
 }
 /*Filter styles*/
